# Astrion_capstone_7

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
.streamlit/: secrets.toml.example
config/: .env.example  config.py
dashboard/: app.py
data/raw/retail/: fact_sales_normalized.csv
docker_test/: docker-compose.yml  ingestion.sql
docs/: ARCHITECTURE.md  generate_architecture.py
docs/adr/: 0001-p1-critical-correctness.md
lang/: pyproject.toml
lang/basicChatbot/: basicchatbot.ipynb
outputs/: baseline_issues.json  baseline_summary.md  evaluation_baseline.json  evaluation_supervisor.json  retail_injected_issues.json  supervisor_issues.json  supervisor_summary.md
retail_data_quality_triage/: README.md  main.py  requirements.txt
retail_data_quality_triage/config/: .env.example
scripts/: run_pipeline.py
src/astrion_dq/: __init__.py  cli.py  config.py  metadata.py  models.py
src/astrion_dq/adapters/: base.py  retail.py
src/astrion_dq/agent/: __init__.py  code_generator.py  explainer.py  fallback.py  key_manager.py  prioritiser.py  report_generator.py  retry_manager.py  validation.py
src/astrion_dq/api/: app.py
src/astrion_dq/checks/: detect.py  (+2 more)
tests/: test_adapter_retail.py  test_agent_endpoints.py  test_agent_fallback.py  test_agent_key_manager.py  test_agent_validation.py  test_api.py  test_cli_validation.py  test_config_thresholds.py  test_debugger_sensitivity.py  test_drift_no_false_positives.py  test_duplicate_confidence.py  test_ecommerce_messy.py  test_evaluation_matching.py  test_future_date_arrow_compat.py  test_graph_smoke.py  test_impact_score.py  test_injection.py  test_injector_schema_aware.py  test_llm_client.py  test_null_pk_cascade.py  test_psi_quantile_accuracy.py  test_ranking.py  test_resolution_advice.py  test_run_audit_log.py  test_secret_hygiene.py  test_source_isolation.py  test_sql_agent.py  test_supervisor.py  test_upload_triage.py
(+13 files in other folders)
