[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrion-capstone-7"
version = "0.1.0"
description = "Evaluating agentic workflows for data quality triage on retail star-schema data."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
astrion-dq = "astrion_dq.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

