[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrion-capstone-7"
version = "0.5.0"
description = "Enterprise agentic data quality triage for retail analytics warehouses."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
    "scipy>=1.10.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.35.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "reportlab>=4.0.0",
    "typing-extensions>=4.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pip-audit>=2.0",
    "httpx>=0.27.0",
]

[project.scripts]
astrion-dq = "astrion_dq.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
